--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -16,8 +16,8 @@
 
 {{ end }}
 
-<p class="sidebar"><a class="sidebar" href="https://scholar.harvard.edu/files/stantcheva/files/cv_sstantcheva_jan2023.pdf">Bio and CV</a></p>
-<p class="sidebar"><a class="sidebar" href="https://scholar.harvard.edu/stantcheva/classes">Teaching</a></p>
+<p class="sidebar" style="font-size:20px"><a class="sidebar" href="https://scholar.harvard.edu/files/stantcheva/files/cv_sstantcheva_jan2023.pdf">Bio and CV</a></p>
+<p class="sidebar" style="font-size:20px"><a class="sidebar" href="https://scholar.harvard.edu/stantcheva/classes">Teaching</a></p>
 
 
 {{ with .Site.Params.logo }}
