--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -360,12 +360,12 @@ img {
 header {
   float: left;
   position: fixed;
-  background: #95281b;
+  background: #781e13;
   top: 0px;
   left: 0px;
   bottom: 0px;
   padding: 2.5vw;
-  width: 25vw;
+  width: 20vw;
   height: 100vh;
   -webkit-font-smoothing: subpixel-antialiased; }
 
