--- a/themes/academimal/layouts/partials/header.html
+++ b/themes/academimal/layouts/partials/header.html
@@ -15,6 +15,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     </head>
+    <header style="overflow:scroll;">
     {{ partial "sidebar.html" . }}
     </header>
 </html>
