--- a/themes/academimal/layouts/partials/header.html
+++ b/themes/academimal/layouts/partials/header.html
@@ -16,6 +16,6 @@
     <meta name="theme-color" content="#ffffff">
     </head>
     <header style="overflow:scroll;">
-
+    {{ partial "sidebar.html" . }}
     </header>
 </html>
