--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,6 +6,8 @@
 {{ $.Scratch.Set "currentPageTitle" .Title }}
 
 {{ range .Site.Menus.main }}
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="{{ "content" | relURL }}">Home</a></p>
+
 <p class="sidebar" style="font-size:18px" ><a class="sidebar" href="{{ .URL | relURL }}">{{- .Name -}}</a></p>
 
 	{{ if and (eq "Research" ($.Scratch.Get "currentPageTitle")) (eq "Research" .Title) }}
