--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
 
 
 <p class="sidebar" style="font-size:18px" ><a class="sidebar" href="{{ .URL | relURL }}">{{- .Name -}}</a></p>
-
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="{{ .URL | relURL }}">Home</a></p>
 	{{ if and (eq "Research" ($.Scratch.Get "currentPageTitle")) (eq "Research" .Title) }}
 	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#WorkingPapers" | relURL }}">Working Papers</a></p>
 	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#Publications" | relURL }}">Publications</a></p>
