--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -17,7 +17,7 @@
 	{{end}}
 
 {{ end }}
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="{{"teaching/" | relURL }}">Teaching</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="{{"teaching" | relURL }}">Teaching</a></p>
 <p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://scholar.harvard.edu/files/stantcheva/files/cv_sstantcheva_jan2023.pdf">Bio and CV</a></p>
 
 
