--- a/themes/academimal/layouts/teaching/section.html
+++ b/themes/academimal/layouts/teaching/section.html
@@ -6,7 +6,7 @@
     <p>
         <strong>{{ .id }}: {{ .title }}</strong><br>
         {{ .term }}, {{ .institute }}<br>
-        Instructor: <a href="{{ .RelPermalink }}">{{ .instructor }}</a>
+        Instructor: <a class="no-link">{{ .instructor }}</a>
         {{ with .role }}
         <br>Role: {{ . }}
         {{ end }}
