--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -31,20 +31,7 @@
     <p>
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
         
-        {{ with .coauthors }}
-          {{ $coauthors := split . "," }}
-          {{ $len := len $coauthors }}
-          {{ range $index, $coauthor := $coauthors }}
-            {{ $trimmed := trim $coauthor " " }}
-            {{ if eq $index 0 }}
-              <a href=".url }}" target="_blank">{{ $trimmed }}</a>
-            {{ else if eq $index $len }}
-              , <a href=".url }}" target="_blank">{{ $trimmed }}</a>
-            {{ else }}
-              , <a href=".url" target="_blank">{{ $trimmed }}</a>
-            {{ end }}
-          {{ end }}
-        {{ end }}
+        {{ with .coauthors }}<a href="{{ . }}" target="blank"><p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{{ end }}
 
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
