--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -31,7 +31,21 @@
     <p>
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
         
-         {{ with .coauthors }}<p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{{ end }}
+     
+{{ with .Coauthors }}
+    <p style="margin:5px 0px 5px 0px;">
+      (with
+      {{ $coauthors := split . "," }}
+      {{ range $index, $coauthor := $coauthors }}
+        {{ $trimmed := trim $coauthor " " }}
+        {{ if eq $index 0 }}
+          <a href="{{ . }}" target="_blank">{{ $trimmed }}</a>
+        {{ else if gt $index 0 }}
+          , <a href="{{ . }}" target="_blank">{{ $trimmed }}</a>
+        {{ end }}
+      {{ end }})
+    </p>
+  {{ end }}
 
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
