--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -32,20 +32,7 @@
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
         
      
-{{ with .Coauthors }}
-    <p style="margin:5px 0px 5px 0px;">
-      (with
-      {{ $coauthors := split . "," }}
-      {{ range $index, $coauthor := $coauthors }}
-        {{ $trimmed := trim $coauthor " " }}
-        {{ if eq $index 0 }}
-          <a href="{{ . }}" target="_blank">{{ $trimmed }}</a>
-        {{ else if gt $index 0 }}
-          , <a href="{{ . }}" target="_blank">{{ $trimmed }}</a>
-        {{ end }}
-      {{ end }})
-    </p>
-  {{ end }}
+{{ with .coauthors }}<p style="margin:5px 0px 5px 0px;">(with {{ range $i, $e := . }}{{ if $i }}, {{ end }}{{ if .link }}<a href="{{ .link }}" target="_blank">{{ .name }}</a>{{ else }}{{ .name }}{{ end }}{{ end }})</p>{{ end }}
 
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
