--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -29,7 +29,7 @@
     {{ $other_text := .other_text }} 
 
     <p>
-        <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
+        <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ .url }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
         
         {{ with .coauthors }}<a href="{{ . }}" target="blank"><p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{{ end }}
 
