--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -31,11 +31,7 @@
     <p>
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
                     
-        {{ with .coauthors }}
-        <p style="margin:5px 0px 5px 0px;"> Press coverage:
-        {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }}</a>
-        {{ end }}
-        {{ end }}
+        {{ with .coauthors }}<a href="{{ . }}" target="blank"><p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{{ end }}
 
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
