--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -31,12 +31,6 @@
     <p>
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
    
-        {{ with .coauthors }}
-        <p style="margin:5px 0px 5px 0px;"> coauthor:
-        {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }}</a>
-        {{ end }}
-        {{ end }}
-
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
         {{ with .book_edited }}<span style="margin:5px 0px 5px 0px;">in <em>{{ . }}</em></span>{{ end }}<em>{{ .book }}, {{ .year }} </em>
@@ -51,8 +45,8 @@
         {{ end }}
         {{ end }}
 
-        {{ with .presscoverage }}
-        <p style="margin:5px 0px 5px 0px;"> Press coverage:
+        {{ with .coauthors }}
+        <p style="margin:5px 0px 5px 0px;"> Coauthors:
         {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }}</a>
         {{ end }}
         {{ end }}
