--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -45,8 +45,8 @@
         {{ end }}
         {{ end }}
 
-        {{ with .coauthors }}
-        <p style="margin:5px 0px 5px 0px;"> Coauthors:
+        {{ with .presscoverage }}
+        <p style="margin:5px 0px 5px 0px;"> Press coverage:
         {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }}</a>
         {{ end }}
         {{ end }}
