--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -96,18 +96,12 @@
         {{ end }}
 
         {{ with .presscoverage }}
-        <p style="margin:5px 0px 5px 0px;"> Press coverage:
+        <p style="margin:5px 0px 5px 0px;"> Coauthors:
         {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }}</a>
         {{ end }}
         {{ end }}
 
-        {{ with .coauthors }}
-        <p style="margin:5px 0px 5px 0px;"> coauthors:
-        {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }} </a> 
-        {{ end }}
-        {{ end }}
-            
-            
+                      
        {{ with .other }}
         <p style="margin:5px 0px 5px 0px;"> {{ $other_text }}:
         {{ range $i, $e := . }}{{ if $i }},  {{ end }}<a href="{{ .url }}" target="blank">{{ $e.text }} </a> 
