--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -62,11 +62,14 @@
     <br>
 
     <h2 id="Publications">Publications</h2>
-
+     <div style="margin-top:-25px;"></div>
+    {{ with .publications }}
     {{range . }}
     {{ $.Scratch.Add "count" 1 }} 
     {{$index:= $.Scratch.Get "count" }}
     {{ $other_text := .other_text }}
+
+    {{ if ne .year ($.Scratch.Get "curyear") }}<br><h3>{{ .year }}</h3>{{ $.Scratch.Set "curyear" .year}}{{ end }}
    
 
     <p>
