--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -16,7 +16,7 @@
 
 <p class="sidebar" style="font-size:20px"><a class="sidebar" href="">Bio and CV</a></p>
 
-<p class="sidebar">
+<p class="sidebar"style="font-size:20px">
 	<img src="{{ "/icons/twitter-white.png" | relURL }}" class="octicons">
 <a class="sidebar" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
 @{{ .Site.Params.Twitter }}
