--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -16,9 +16,9 @@
 
 <p class="sidebar" style="font-size:20px"><a class="sidebar" href="">Bio and CV</a></p>
 
-<p class="sidebar"style="font-size:20px">
+<p class="sidebar">
 	<img src="{{ "/icons/twitter-white.png" | relURL }}" class="octicons">
-<a class="sidebar" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
+<a class="sidebar" style="font-size:20px" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
 @{{ .Site.Params.Twitter }}
 </a></p>
 
