--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -239,7 +239,7 @@ body {
   background-color: #fff;
   margin: 0;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333131;
+  color: #5e5e5e;
   font-weight: 400; }
 
 h1, h2, h3, h4, h5, h6 {
