--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,11 +14,13 @@
 	{{end}}
 {{ end }}
 
+<p class="sidebar" style="font-size:20px"><a class="sidebar" href="">Useful Links</a></p>
+
 <p class="sidebar" style="font-size:20px"><a class="sidebar" href="">Bio and CV</a></p>
 
 <p class="sidebar">
 	<img src="{{ "/icons/twitter-white.png" | relURL }}" class="octicons">
-<a class="sidebar" style="font-size:16px" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
+<a class="sidebar" style="font-size:20px" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
 @{{ .Site.Params.Twitter }}
 </a></p>
 
