--- a/themes/academimal/layouts/partials/header.html
+++ b/themes/academimal/layouts/partials/header.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/WHU.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/WHU.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#da532c">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     </head>
