--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -50,7 +50,7 @@
   font-style: italic; }
 
 .highlight .err {
-  color: #a61717;
+  color: #1b6382;
   background-color: #e3d2d2; }
 
 .highlight .gd {
