--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -302,7 +302,7 @@ p.sidebar {
   margin-top: -10px;}
 
 a {
-  color: #1b6382;
+  color: #267CB9;
   text-decoration: none; }
 
 a:hover, a:focus {
