--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,7 +14,7 @@
 	{{end}}
 {{ end }}
 
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Bio and CV</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="">CV</a></p>
 
 <p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Useful Links</a></p>
 
