--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -16,7 +16,7 @@
 
 <p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Useful Links</a></p>
 
-<p class="sidebar"><a class="sidebar" href="https://stantcheva.scholars.harvard.edu/sites/g/files/omnuum7746/files/2025-08/CV_SStantcheva_Aug2025.pdf">Bio and CV</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://github.com/huiliecon/homepage/blob/master/content/resume.pdf">Bio and CV</a></p>
 
 {{ with .Site.Params.logo }}
 {{ if (eq "Homepage" ($.Scratch.Get "currentPageTitle")) }}
