--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,9 +14,9 @@
 	{{end}}
 {{ end }}
 
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Useful Links</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://github.com/huiliecon/homepage/blob/master/content/resume.pdf">CV</a></p>
 
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://github.com/huiliecon/homepage/blob/master/content/resume.pdf">Bio and CV</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Useful Links</a></p>
 
 {{ with .Site.Params.logo }}
 {{ if (eq "Homepage" ($.Scratch.Get "currentPageTitle")) }}
