--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,7 +14,7 @@
 	{{end}}
 {{ end }}
 
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://github.com/huiliecon/homepage/blob/94d04529bf12614c78443c3d892f41be8ffde2e4/content/resume.pdf">CV</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://www.dropbox.com/scl/fi/exx033q4gxoobqcg6cka2/resume.pdf?rlkey=8o2y2wji1ebnh4t6bbp0duh77&dl=0">CV</a></p>
 
 <p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Useful Links</a></p>
 
