--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,9 +14,14 @@
 	{{end}}
 {{ end }}
 
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://www.dropbox.com/scl/fi/exx033q4gxoobqcg6cka2/resume.pdf?rlkey=8o2y2wji1ebnh4t6bbp0duh77&dl=0">CV</a></p>
+<p class="sidebar" style="font-size:18px" ><a class="sidebar" href="{{ .URL | relURL }}">{{- .Name -}}</a></p>
+	{{ if and (eq "Useful Links" ($.Scratch.Get "currentPageTitle")) (eq "Useful Links" .Title) }}
+	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "Useful Links/#WorkingPapers" | relURL }}">Working Papers</a></p>
+	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "Useful Links/#Publications" | relURL }}">Publications</a></p>
+	{{end}}
+{{ end }}
 
-<p class="sidebar" style="font-size:18px"><a class="sidebar" href="">Useful Links</a></p>
+<p class="sidebar" style="font-size:18px"><a class="sidebar" href="https://www.dropbox.com/scl/fi/exx033q4gxoobqcg6cka2/resume.pdf?rlkey=8o2y2wji1ebnh4t6bbp0duh77&dl=0">CV</a></p>
 
 {{ with .Site.Params.logo }}
 {{ if (eq "Homepage" ($.Scratch.Get "currentPageTitle")) }}
