--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -7,10 +7,18 @@
 
 <p class="sidebar" style="font-size:18px"><a class="sidebar" href="{{"" | relURL }}">Home</a></p>
 {{ range .Site.Menus.main }}
+
 <p class="sidebar" style="font-size:18px" ><a class="sidebar" href="{{ .URL | relURL }}">{{- .Name -}}</a></p>
 	{{ if and (eq "Research" ($.Scratch.Get "currentPageTitle")) (eq "Research" .Title) }}
 	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#WorkingPapers" | relURL }}">Working Papers</a></p>
 	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#Publications" | relURL }}">Publications</a></p>
+	{{end}}
+{{ end }}
+
+<p class="sidebar" style="font-size:18px" ><a class="sidebar" href="{{ .URL | relURL }}">{{- .Name -}}</a></p>
+	{{ if and (eq "Resources" ($.Scratch.Get "currentPageTitle")) (eq "Resources" .Title) }}
+	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "Resources/#Links" | relURL }}">Links</a></p>
+	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "Resources/#JMP" | relURL }}">JMP</a></p>
 	{{end}}
 {{ end }}
 
